glx/testdata/invalid/broken-references/assertions/assertion-john-birth.glx
assertions:
  assertion-john-birth-date:
    subject:
      event: event-nonexistent
    property: date
    value: "1850-01-15"
    citations:
      - citation-nonexistent
      - citation-census-john
    confidence: high
    sources:
      - source-nonexistent
      - source-census-1851
    notes: "Birth date confirmed by parish register (primary) and 1851 census (secondary)"
